# twitterbot

./: README.md  peripheral.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-13.3/8.6.3/flag-cache/: Cabal-2.4.1.0-IaB5GUEm19R82R9cEdbB1D  HUnit-1.6.0.0-C6N9GX1vz2Z4nPL5JbE3ac  MissingH-1.4.1.0-Bcs42cH7BiY2yuiClZZRxG  RSA-2.3.1-6rmhuASgEHkDkN1CNIH3eX  SHA-1.6.4.4-1GMMHy6WdrlGpMrtGTWHUv  StateVar-1.1.1.1-B0ospHKg13JCxw6f0gS05h  adjunctions-4.4-J8nZ5egZ0xU2d8YwbV1sWV  aeson-1.4.2.0-Dzbo5wshHlhHZyJApR1zxe  ansi-terminal-0.8.2-LZ54B5ErqCiIlNwOVvnj65  asn1-encoding-0.9.5-F5Be8yTLY1IIqdvxL6zofm  asn1-parse-0.9.4-1ptrYxjirNQ7Stcbq9nKwE  asn1-types-0.3.2-IMvfDQWGa8L2ziiyRYDzRr  async-2.2.1-4fWSSJ8SFccIxQJVItkRnX  attoparsec-0.13.2.2-AIDYee9KPGPHGyIUYFLj8F  authenticate-oauth-1.6-Cr7Ft10aA2k65e7sKK0dPC  base-compat-0.10.5-FRXoAxOVtbG2qLNIZm1tTr  base-orphans-0.8-9c3aMxqS7QbGl4Ot5i8lwK  base64-bytestring-1.0.0.2-9zRsxWrEm5zGbLjNlDas  basement-0.0.8-LdnmevtSRu4FZXxmMQJlGY  bifunctors-5.5.3-DNms2pwsLzcJEdMjaHGChR  blaze-builder-0.4.1.0-KrFxFv3kgua3BTNMsMBadC  byteable-0.1.1-9guyEXUUK503mzSnI32g2S  cabal-doctest-1.0.6-86ieqb3MUgY7IBnRw4OXav  call-stack-0.1.0-J1eWgTNOnM4IGVyeW0v2YZ  case-insensitive-1.2.0.11-GGYU9CY9cs88wywgwHVKC6  cereal-0.5.8.0-6rtfJLvNbgP66iuaPkuxJC  colour-2.3.4-BYzTQyKoQ9LK29pbkBo2SY  comonad-5.0.4-LgAoXN8uHo4Lw150anSHrf  conduit-1.2.13.1-3UdFFsLTUTw9ZsrBsYzRo3  conduit-1.3.1-EzeGDsAxmad51vTgyOcC3s  conduit-extra-1.1.17-Geleb1su14QBxYkJhAKSwc  conduit-extra-1.3.0-PWmfSdtoUp3Pv0C6BzBlA  (+83 more)
src/: Main.hs
src/Utils/: Auth.hs  Processing.hs
(+122 files in other folders)
