name:                peripheral
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/peripheral#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable peripheral
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , twitter-conduit >= 0.3.0
                     , lens >= 4.17 
                     , http-conduit
                     , bytestring >= 0.10.8.2
                     , case-insensitive >= 1.2.0.11
                     , containers >= 0.6.0.1
                     , network-uri >= 2.6.1.0
                     , twitter-types-lens >= 0.7.2
                     , resourcet >= 1.2.2
                     , conduit >= 1.3.1
                     , conduit-extra >= 1.3.0
                     , text >= 1.2.3.1
                     , directory >= 1.3.3.0
                     , filepath >= 1.4.2.1
                     , process >= 1.6.3.0
                     , authenticate-oauth >= 1.6
